# nova-launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
.github/workflows/: build.yml  cd.yml  pages.yml
docs/: index.html
public/: splashscreen.html
scripts/: build_linux.sh  build_mac.sh  build_windows.ps1
src/: App.svelte  config.rs  store.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  config.rs  discord.rs  lib.rs  main.rs  sync.rs  worlds.rs
src-tauri/src/auth/: microsoft.rs  mod.rs  storage.rs
src-tauri/src/minecraft/: launcher.rs  version.rs
src/auth/: microsoft.rs  storage.rs
src/lib/: i18n.js  loaderIcons.js
src/lib/components/: Checkbox.svelte  CrashModal.svelte  CreateInstanceWizard.svelte  InstanceCard.svelte  LaunchOverlay.svelte  NovaSpinner.svelte  ProgressBar.svelte  Select.svelte  Sidebar.svelte  Toast.svelte  UpdateModal.svelte
src/lib/locales/: de.json  en.json  fr.json
src/lib/pages/: Discover.svelte  Home.svelte  InstanceDetail.svelte  Instances.svelte  Modpacks.svelte  Mods.svelte  Settings.svelte  SetupWizard.svelte  SkinManager.svelte  Versions.svelte
src/minecraft/: launcher.rs  mod.rs  version.rs
